--- a/pfirst/src/app/accompagner-single/accompagner-single.component.html
+++ b/pfirst/src/app/accompagner-single/accompagner-single.component.html
@@ -45,17 +45,14 @@
         <td><h2>Ville: </h2></td>
         <td>{{City}}</td>
       </tr>
-      <tr>
-        <td><h2>Endroit ou accompagner</h2></td>
-        <td>{{Local}}</td>
-      </tr>
+
       <tr>
         <td><h2>Quand ?</h2></td>
         <td>{{Dispo}}</td>
       </tr>
       <tr>
         <td><h2>Plage horaire:</h2></td>
-        <td>De {{Quand1}} a {{Quand2}}</td>
+        <td>De {{Quand1}} à {{Quand2}}</td>
       </tr>
 
       <tr>
