--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -39,7 +39,7 @@
 
       <tr>
         <td><h2>Quand :</h2></td>
-        <td>{{DispoJour}} a {{DispoHeure}}</td>
+        <td>{{DispoJour}} à {{DispoHeure}}</td>
       </tr>
       <tr>
         <td><h2>Souhaite être accompagné :</h2></td>
@@ -67,7 +67,7 @@
         <td><span id="budget" class="badge badge-warning"><p id="prix">{{Budget}}€</p></span></td>
       </tr>
       <tr>
-        <td><h2>Commentaire</h2>{{Description}}</td>
+        <td><h2>Commentaire : </h2>{{Description}}</td>
       </tr>
     </table>
 
