--- a/pfirst/src/app/cuisine-single/cuisine-single.component.html
+++ b/pfirst/src/app/cuisine-single/cuisine-single.component.html
@@ -35,7 +35,7 @@
 
       <tr>
         <td><h2>Service : </h2></td>
-        <td>cuisine</td>
+        <td>Cuisine</td>
       </tr>
       <tr>
         <td><h2>Type de plat</h2></td>
@@ -53,10 +53,10 @@
 
       <tr>
         <td><h2>Quand ?</h2></td>
-        <td>{{DispoJour}} a {{DispoHeure}}</td>
+        <td>{{DispoJour}} à {{DispoHeure}}</td>
       </tr>
       <tr>
-        <td><h2>Commentaire</h2>{{Description}}</td>
+        <td><h2>Commentaire : </h2>{{Description}}</td>
       </tr>
     </table>
 
