--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -38,24 +38,24 @@
 
       <tr>
         <td><h2>Service : </h2></td>
-        <td>Menage</td>
+        <td>Ménage</td>
       </tr>
       <tr>
         <td><h2>Quand ?</h2></td>
-        <td>{{Date}} a {{Heure}}</td>
+        <td>{{Date}} à {{Heure}}</td>
       </tr>
       <tr>
-        <td><h2>Salle a nettoyer :</h2></td>
+        <td><h2>Salle à nettoyer :</h2></td>
         <td>{{Salle}}</td>
       </tr>
       <tr>
-        <td><h2>Surface a nettoyer :</h2></td>
+        <td><h2>Surface à nettoyer :</h2></td>
         <td>{{Surface}}  m²</td>
       </tr>
 
 
       <tr>
-        <td><h2>Liste du materiel de {{User}}</h2></td>
+        <td><h2>Liste du matériel de {{User}}</h2></td>
         <td>
           <ul class="list-group">
             <div *ngFor="let elt of Materiel">
@@ -76,7 +76,7 @@
       </tr>
       <tr>
         <td><div class="toast-header">
-            <strong class="mr-auto">Description:</strong>
+            <strong class="mr-auto">Commentaire :</strong>
           </div>
           <div class="toast-body">
               {{Description}}
