Mode nuit corrigé sur courses et ménages

--- a/pfirst/src/app/courses-single/courses-single.component.css
+++ b/pfirst/src/app/courses-single/courses-single.component.css
@@ -35,3 +35,7 @@
 :host-context(.theme-dark) #jumb{
   background-color: gray;
 }
+
+:host-context(.theme-dark) #liste{
+  background-color: dimgray;
+}
