--- a/pfirst/src/app/courses-single/courses-single.component.html
+++ b/pfirst/src/app/courses-single/courses-single.component.html
@@ -50,7 +50,7 @@
         <td>
           <ul class="list-group">
             <div *ngFor="let element of this.Liste">
-              <li class="list-group-item d-flex justify-content-between align-items-center">
+              <li class="list-group-item d-flex justify-content-between align-items-center" id="liste">
                 {{element.produit}}
                 <span class="badge badge-primary">{{element.quantite}}</span>
               </li>
