--- a/pfirst/src/app/menage-single/menage-single.component.css
+++ b/pfirst/src/app/menage-single/menage-single.component.css
@@ -26,3 +26,7 @@
 :host-context(.theme-dark) #jumb{
   background-color: gray;
 }
+
+:host-context(.theme-dark) #liste{
+  background-color: dimgray;
+}
