--- a/pfirst/src/app/menage-single/menage-single.component.html
+++ b/pfirst/src/app/menage-single/menage-single.component.html
@@ -59,7 +59,7 @@
         <td>
           <ul class="list-group">
             <div *ngFor="let elt of Materiel">
-              <li class="list-group-item d-flex justify-content-between align-items-center">
+              <li class="list-group-item d-flex justify-content-between align-items-center" id="liste">
                 {{elt}}
               </li>
             </div>
